# slides

./: .gitignore  .markdownlint.json  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  about.txt  build.ps1  build.sh
Example_One/: handouts.html  index.html  slides.md
Example_One/css/: default_fonts.css  default_remark.css
Personal_Productivity_and_GTD/: handouts.html  index.html  slides.md  style.css
Personal_Productivity_and_GTD/css/: default_footer.css
Remark_CMake_API_Reference/: handouts.html  index.html  slides.md  style.css
Remark_CMake_API_Reference/css/: default.css  default_laser_pointer.css
_layouts/: default.html
cmake/: base.cmake  remark.cmake
gh-pages/: _config.yml
lib/: CMakeLists.txt
lib/gh-pages/: CMakeLists.txt  _config.yml
lib/remark/: CMakeLists.txt
lib/remark/css/: CMakeLists.txt
lib/remark/css/base/: CMakeLists.txt
lib/remark/css/default/: CMakeLists.txt
lib/remark/css/default/css/: default.css  default_base.css  (+6 more)
lib/remark/css/none/: CMakeLists.txt
lib/remark/languages/: CMakeLists.txt
lib/remark/scripts/: remark.js
lib/remark/templates/: default_template.html.in
src/: CMakeLists.txt
src/Almost_GTD/: CMakeLists.txt  slides.md
src/Example_One/: CMakeLists.txt  slides.md
src/Personal_Productivity_and_GTD/: CMakeLists.txt  slides.md  style.css.in
src/Remark_CMake_API_Reference/: CMakeLists.txt  style.css.in
src/Remark_CMake_API_Reference/1_title/: slides.md
src/Remark_CMake_API_Reference/2_api_reference/: slides.md
src/Remark_CMake_API_Reference/3_end/: slides.md
src/example/: slides.md
